Fix Bug #282982 - Violation of RfC 2633 Chapter 3.8

Violation of RfC 2633 Chapter 3.8 - smime.p7m is not recognized as
encrypted mail, not encrypted, displayed in-line when the content-type
is application/octet-stream.

BUG: 282982
FIXED-IN: 4.10.3
REVIEW: 110011